--- a/Feb11Example/Feb11Example/en.lproj/ViewController.xib
+++ b/Feb11Example/Feb11Example/en.lproj/ViewController.xib
@@ -286,6 +286,14 @@
 					</object>
 					<int key="connectionID">34</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">handleTap:</string>
+						<reference key="source" ref="1009935559"/>
+						<reference key="destination" ref="372490531"/>
+					</object>
+					<int key="connectionID">52</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -719,7 +727,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">50</int>
+			<int key="maxID">52</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -734,17 +742,24 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">ViewController</string>
 					<string key="superclassName">UIViewController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">handleTap:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">handleTap:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">handleTap:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
 					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="TapAll">UITapGestureRecognizer</string>
 						<string key="inputText">UITextField</string>
 						<string key="inputText2">UITextField</string>
 						<string key="outLabel">UILabel</string>
+						<string key="tapAll">UITapGestureRecognizer</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="TapAll">
-							<string key="name">TapAll</string>
-							<string key="candidateClassName">UITapGestureRecognizer</string>
-						</object>
 						<object class="IBToOneOutletInfo" key="inputText">
 							<string key="name">inputText</string>
 							<string key="candidateClassName">UITextField</string>
@@ -756,6 +771,10 @@
 						<object class="IBToOneOutletInfo" key="outLabel">
 							<string key="name">outLabel</string>
 							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="tapAll">
+							<string key="name">tapAll</string>
+							<string key="candidateClassName">UITapGestureRecognizer</string>
 						</object>
 					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
